--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         }
         
-        init();
+        init();                                                                                                                                                                      ///BOKUNONAMAEOBOETENE!! DAKARA[YATHIS]NANDAYO.YASUHITODAYO.///
         drawAll();
         setInterval(dropTetro, GAME_SPEED);
         
